syntax = "proto3";

option csharp_namespace = "HolyShitServer.Src.Network.Packets";

import "Common.proto";

// 위치 업데이트 요청
message C2SPositionUpdateRequest {
    double x = 1;
    double y = 2;
}

// 위치 업데이트 알림
message S2CPositionUpdateNotification {
    repeated CharacterPositionData characterPositions = 1;
}