syntax = "proto3";

option csharp_namespace = "HolyShitServer.Src.Network.Packets";

import "Common.proto";

message C2SCreateRoomRequest {
    string name = 1;
    int32 maxUserNum = 2;
}

message S2CCreateRoomResponse {
    bool success = 1;
    RoomData room = 2;
    GlobalFailCode failCode = 3;
}

message C2SGetRoomListRequest {
    
}

message S2CGetRoomListResponse{
    repeated RoomData rooms = 1;
}

message C2SJoinRoomRequest {
    int32 roomId = 1;
}

message S2CJoinRoomResponse {
    bool success = 1;
    RoomData room = 2;
    GlobalFailCode failCode = 3;
}

message C2SJoinRandomRoomRequest {
}

message S2CJoinRandomRoomResponse {
    bool success = 1;
    RoomData room = 2;
    GlobalFailCode failCode = 3;
}

message S2CJoinRoomNotification {
    UserData joinUser = 1;
}

message C2SLeaveRoomRequest {

}

message S2CLeaveRoomResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CLeaveRoomNotification {
    int32 userId = 1;
    int32 ownerId = 2;
}

message C2SRoomReadyRequest {
    bool isReady = 1;  // 토글된 레디 상태
}

message S2CRoomReadyResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CRoomReadyNotification {
    RoomUserReadyData userReady = 1;
}

message C2SGetRoomReadyStateRequest {
    int32 roomId = 1;
}

message S2CGetRoomReadyStateResponse {
    bool success = 1;
    repeated RoomUserReadyData readyStates = 2;
    GlobalFailCode failCode = 3;
}

// 채팅 메시지 전송 요청
message C2SChatMessageRequest {
    string message = 1;           // 채팅 메시지 내용
    ChatMessageType messageType = 2;  // 메시지 타입
}

// 채팅 메시지 전송 응답
message S2CChatMessageResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

// 채팅 메시지 알림 (서버 -> 모든 클라이언트)
message S2CChatMessageNotification {
    string nickname = 1; // 닉네임
    string message = 2; // 메시지 내용
    int64 timestamp = 3; // 서버 타임스탬프
    ChatMessageType messageType = 4; // 메시지 타입
}

message C2SGamePrepareRequest {

}

message S2CGamePrepareResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CGamePrepareNotification {
    RoomData room = 1;
}

message C2SGameStartRequest {

}

message S2CGameStartResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CGameStartNotification {
    ServerInfoData serverInfo = 1; // 접속할 게임 서버 정보
}